# ball_pivoting_algorithm

./: CMakeLists.txt  build.sh  download_bunny.py  download_data.sh  main.cpp  run.sh  test.cpp
.cache/clangd/index/: hoge.hpp.D056F69E2037ED04.idx  main.cpp.6C962BA637919BFC.idx
